Correct Spacing

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -43,10 +43,18 @@ main {
     margin: 0;
 }
 
+.details {
+    margin: 0 200px 50px;
+}
+
+.details ul {
+    padding: 0;
+}
+
 .details ul li {
     list-style-type: none;
-    margin: 10px 0;
-    padding: 0 0 0 35px;
+    margin: 15px 0;
+    padding: 0 0 0 40px;
 }
 
 .details ul li.wifi{
@@ -63,4 +71,14 @@ main {
 
 .details ul li.photo-film{
     background: url('/images/photo-film-solid\ 1.svg') no-repeat center left;
+}
+
+h3 {
+    text-align: center;
+    font-size: 2em;
+    margin: 30px 0;
+}
+
+.cta {
+    margin: 0 200px 50px;
 }
